fix: there was too much space up top as a result of the header top margin + site wide container margin

--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -16,7 +16,7 @@ body {
   font-size: rem(15px);
   line-height: 1.5;
   text-align: center;
-  background-image: url(/images/bg-pattern-bottom-mobile.svg) top;
+  background: url(/images/bg-pattern-top-mobile.svg) no-repeat;
 }
 
 .attribution {
