--- a/app/scss/_layout.scss
+++ b/app/scss/_layout.scss
@@ -1,6 +1,6 @@
 .l- {
   &header {
-    margin-top: rem(80px);
+    margin-top: rem(56px);
   }
 
   &ratings {
